♻️refact:expend 엔티티 및 서비스 코드 개선